<resources>
    <string name="app_name">Trendy</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="message_no_internet">No internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Trends...</string>
    <string name="new_arrival">New Arrival</string>
    <string name="view_all">View All</string>
    <string name="account">Account</string>
    <string name="username">Lisa Nickii</string>
    <string name="phone_number">0987438574</string>
    <string name="manage_address">Manage Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back! 👋</string>
    <string name="subtitle">Sign in to access your personalized fashion.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="join_trendy_today">Join Trendy Today 👤</string>
    <string name="sign_up_subtitle">Embark on a fashion journey tailored for you.</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="phone">Phone</string>
    <string name="optional">(Optional *)</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions.]]></string>
    <string name="i_agree_to_trendy">I agree to Trendy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="app_appearance">App Appearance</string>
    <string name="data_analytics"><![CDATA[Data & Analytics]]></string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="price">US $%s</string>
    <string name="price2">$%s</string>

    <string name="copyright">© 2024 Trendy Team. All rights reserved.</string>
    <string name="hot_deals_this_week">Hot Deals This Week</string>
    <string name="product">Product</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="choose_product_variant">Choose Product Variant</string>
    <string name="stock">Stock : %s</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="categories">Categories</string>
    <string name="filter">Filter</string>
    <string name="checkout">Checkout - $%s</string>
    <string name="size_v">Size: %s</string>
    <string name="color_v">Color: %s</string>
    <string name="qty_v">Qty: %s</string>
    <string name="checkout_title">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="your_order">Your Order (%s)</string>
    <string name="delivery">Delivery</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="promos_vouchers"><![CDATA[Promos & Vouchers]]></string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal (%s items)</string>
    <string name="service_fee">Service Fee</string>
    <string name="tax">Tax</string>
    <string name="total_payment">Total Payment</string>
    <string name="choose_delivery_address">Choose Delivery Address</string>
    <string name="select_location_continue_fill_address"><![CDATA[Select Location & Continue Fill Address]]></string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_detail">Address Detail</string>
    <string name="address_labels">Address Labels</string>
    <string name="recipient_s_name">Recipient\'s Name</string>
    <string name="recipient_s_phone_number">Recipient\'s Phone Number</string>
    <string name="save">Save</string>
    <string name="change_address">Change Address</string>
    <string name="total_after_discount">Total after discount</string>
    <string name="choose_delivery_method">Choose Delivery Method</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="order">Order</string>
    <string name="total_shopping">Total Shopping</string>
</resources>