<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.view.AddressDetailActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/back_btn_login"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:src="@drawable/ios_arrow_left_svgrepo_com" />

            <TextView
                android:id="@+id/titleLead"
                android:gravity="center"
                android:textColor="@color/txt_black"
                android:textSize="22sp"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_centerInParent="true"
                android:text="@string/address_detail" />
            <ImageView
                android:background="@drawable/notification_bg_round"
                android:id="@+id/btnEdit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:visibility="gone"
                android:src="@drawable/notification_13_svgrepo_com"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:background="@color/white"
        android:layout_below="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:fillViewport="true"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:paddingBottom="30dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtLocation"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:drawablePadding="10dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:background="@drawable/search_edt_bg_round"
                    android:hint="@string/select_location_continue_fill_address"
                    android:textColor="@color/txt_black"
                    android:drawableTint="@color/primary"
                    android:drawableStart="@drawable/ic_location_fill"/>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/address_labels"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/txt_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/address_name"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingHorizontal="10dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/search_edt_bg_round"
                        android:hint="Add Label"
                        android:textColor="@color/grey_font"
                        android:drawableTint="@color/primary"
                        android:drawableStart="@drawable/location_type"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/recipient_s_name"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/txt_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/recipient_name"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingHorizontal="10dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/search_edt_bg_round"
                        android:hint="Name"
                        android:textColor="@color/grey_font"
                        android:drawableTint="@color/primary"
                        android:drawableStart="@drawable/ic_user"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/recipient_s_phone_number"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/txt_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/recipient_phone"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingHorizontal="10dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/search_edt_bg_round"
                        android:hint="xxx xxx xxx"
                        android:textColor="@color/grey_font"
                        android:drawableTint="@color/primary"
                        android:drawableStart="@drawable/ic_phone"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:paddingHorizontal="15dp"
        android:paddingVertical="25dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/saveBtn"
            android:background="@drawable/btn_round_v2"
            android:backgroundTint="@color/primary"
            android:elevation="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="16sp"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white_80"
            android:layout_width="0dp"
            android:layout_height="60dp"/>
    </LinearLayout>
</RelativeLayout>