<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:id="@+id/method_card"
    android:background="@color/white"
    app:cardCornerRadius="12dp"
    android:elevation="0.5dp"
    app:cardElevation="0.5dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_product"
            android:src="@drawable/dress_product"
            android:scaleType="centerCrop"
            android:layout_width="130dp"
            android:layout_height="200dp"/>
        <RelativeLayout
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/product_name"
                android:textSize="16sp"
                android:text="@string/product"
                android:maxLines="2"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/txt_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/size"
                android:layout_below="@+id/product_name"
                android:textSize="14sp"
                android:text="@string/size_v"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/txt_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/color_layout"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/color"
                    android:textSize="14sp"
                    android:text="@string/color_v"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/txt_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:id="@+id/color_dis"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/size_round_bg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/qty"
                android:layout_below="@+id/color_layout"
                android:textSize="14sp"
                android:text="@string/qty_v"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/txt_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:id="@+id/productPrice_layout"

                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/product_before_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="2dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text=""
                    android:visibility="visible"
                    android:textColor="@color/txt_black"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_medium"/>
                <TextView
                    android:id="@+id/dis_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="2dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text=""
                    android:visibility="gone"
                    android:textColor="@color/txt_black"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_medium"/>
                <TextView
                    android:id="@+id/product_price_after_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text=""
                    android:visibility="gone"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/roboto_medium"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/edit"
                android:src="@drawable/edit_2_svgrepo_com"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/txt_black" />
            <ImageView
                android:id="@+id/delete"
                android:layout_marginTop="20dp"
                android:src="@drawable/trash_bin_2_svgrepo_com"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:tint="@color/red" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>