<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_top_round"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/title_layout"
            android:paddingTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/choose_product_variant"
                android:textColor="@color/txt_black"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="25dp"
                android:background="@color/gray_divide"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_layout"
            android:layout_below="@+id/title_layout"
            android:paddingTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_product"
                    android:src="@drawable/dress_product"
                    android:scaleType="centerCrop"
                    android:layout_width="140dp"
                    android:layout_height="220dp"/>
                <RelativeLayout
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/product_name"
                        android:textSize="16sp"
                        android:text="@string/product"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/txt_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/stock"
                        android:layout_below="@+id/product_name"
                        android:textSize="14sp"
                        android:text="@string/stock"
                        android:maxLines="2"
                        android:layout_marginTop="15dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/txt_gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/productPrice_layout"
                        android:layout_below="@+id/stock"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/product_before_dis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginStart="2dp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:text=""
                            android:visibility="visible"
                            android:textColor="@color/txt_black"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/roboto_medium"/>
                        <TextView
                            android:id="@+id/dis_percentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginStart="2dp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:text=""
                            android:visibility="gone"
                            android:textColor="@color/txt_black"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/roboto_medium"/>
                        <TextView
                            android:id="@+id/product_price_after_dis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginStart="2dp"
                            android:layout_marginBottom="5dp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:text=""
                            android:visibility="gone"
                            android:textColor="@color/primary"
                            android:fontFamily="@font/roboto_medium"/>
                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/group_btn_add"
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/sub_btn"
                            android:background="@drawable/bg_sub_round"
                            android:layout_width="40dp"
                            android:layout_height="40dp">
                            <TextView
                                android:textColor="@color/txt_black"
                                android:text="-"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:background="@color/main_bg"
                            android:layout_width="40dp"
                            android:layout_height="40dp">
                            <TextView
                                android:id="@+id/txt_amount"
                                android:textColor="@color/txt_black"
                                android:text="1"
                                android:textSize="14sp"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/add_btn"
                            android:background="@drawable/bg_add_round"
                            android:layout_width="40dp"
                            android:layout_height="40dp">
                            <TextView
                                android:textColor="@color/txt_black"
                                android:text="+"
                                android:textSize="16sp"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RelativeLayout>
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_marginTop="15dp"
                android:background="@color/gray_divide"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/size_color"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:layout_below="@+id/product_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/size"
                android:textSize="20sp"
                android:textColor="@color/txt_black"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/size_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="15dp"
                android:background="@color/gray_divide"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <TextView
                android:text="@string/color"
                android:textSize="20sp"
                android:textColor="@color/txt_black"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/color_rec"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginTop="15dp"
                android:background="@color/gray_divide"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <LinearLayout
                android:id="@+id/group_btn"
                android:orientation="horizontal"
                android:paddingHorizontal="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/buy_now_btn"
                    android:background="@drawable/btn_round_v2"
                    android:backgroundTint="@color/white_80"
                    android:elevation="0dp"
                    android:text="@string/buy_now"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginEnd="7dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"/>
                <TextView
                    android:id="@+id/addToCart_btn"
                    android:background="@drawable/btn_round_v2"
                    android:backgroundTint="@color/primary"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/add_to_cart"
                    android:textSize="16sp"
                    android:layout_marginStart="7dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white_80"
                    android:layout_width="0dp"
                    android:layout_height="60dp"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/skeleto_animation"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="900dp"/>


</RelativeLayout>